--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, 'Home') %>
+
+  <h1>ScrambleBox</h1>
+   <p>
+     This is the homepage for the social marketing site of ScrambleBox, sell your items and buy stuff from people near you, easy and secure!
+   </p>
