--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,11 @@
+  <div class="center hero-unit">
+
   <h1>ScrambleBox</h1>
-   <p>
+   <h2>
      This is the homepage for the social marketing site of ScrambleBox, sell your items and buy stuff from people near you, easy and secure!
-   </p>
+   </h2>
+
+<%= link_to "Sign up now!", '#', class: "btn btn-large btn-success" %>
+</div>
+
+<%= link_to image_tag("scrmble.png", alt: "ScrambleBox"), 'http://www.scramblebox.com' %>
