--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,7 @@
      This is the homepage for the social marketing site of ScrambleBox, sell your items and buy stuff from people near you, easy and secure!
    </h2>
 
-<%= link_to "Sign up now!", '#', class: "btn btn-large btn-success" %>
+<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-success" %>
 </div>
 
-<%= link_to image_tag("scrmble.png", alt: "ScrambleBox"), 'http://www.scramblebox.com' %>
+<%= link_to image_tag("rails.png", alt: "ScrambleBox"), 'http://www.scramblebox.com' %>
