--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,31 +1,44 @@
-	<header class="navbar navbar-fixed-top">
-		<div class="navbar-inner">
+	<div class="navbar-wrapper">
 			<div class="container">
-				<%= link_to "ScrambleBox", root_path, id: "logo" %>
-				<nav>
-					<ul class="nav pull-right">
-						<li><%= link_to "Home",   root_path  %></li>
-						<li><%= link_to "Help",   help_path   %></li>
-						<% if signed_in? %>
-						<li><%= link_to "Users", users_path %></li>
-						<li id="fat-menu" class="dropdown">
+				<div class="navbar navbar-inverse">
+					<div class="navbar-inner">
+						<!-- Responsive navbar -->
+			<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+                  </a>
+
+				
+
+				<div class="nav-collapse collapse">
+					<a class="brand" href="#"><%= link_to "ScrambleBox", root_path %></a>
+					<ul class="nav pull-left">
+
+						<li><%= link_to "Help", help_path %></li>
+						 <% if signed_in? %>
+						  <li><%= link_to "Users", users_path %></li>
+						  <li id="fat-menu" class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 								Account <b class="caret"></b>
 							</a>
-							<ul class="dropdown-menu">
-								<li><%= link_to "Profile", current_user %></li>
-								<li><%= link_to "Settings", edit_user_path(current_user) %></li>
+							  <ul class="dropdown-menu">
+								 <li><%= link_to "Profile", current_user %></li>
+								 <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+								 	</ul>
 								<li class="divider"></li>
-								<li>
+								 <li>
 									<%= link_to "Sign out", signout_path, method: "delete" %>
-								</li>
-							</ul>
-						</li>
+								 </li>
+				
+				
 						<% else %>
 						<li><%= link_to "Sign In", signin_path %></li>
 						<% end %>
 					</ul>
-				</nav>
+				
 			</div>
 		</div>
-	</header>
+	</div>
+ </div>
+</div>
