--- a/app/assets/stylesheets/style_1.css.scss
+++ b/app/assets/stylesheets/style_1.css.scss
@@ -1,6 +1,3 @@
-$linkColor:      #FF0000;
-$linkColorHover: #000;
-
 @import "bootstrap";
 
 /* mixins, variables, etc */
@@ -20,7 +17,6 @@ $grayMediumLight: #eaeaea;
 html {
 	overflow-y: scroll;
 }
-
 
 body {
   margin: 0;
@@ -45,6 +41,7 @@ textarea {
 }
 
 
+
 /* typography */
 
 
@@ -67,6 +64,7 @@ textarea {
 
     /* Remove border and change up box shadow for more contrast */
     .navbar .navbar-inner {
+      background-image: url(/assets/patterns/cream_dust.png);
       border: 0;
       -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
          -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
@@ -93,7 +91,6 @@ textarea {
 
 
 
-
 /* footer */
 
 footer {
@@ -101,16 +98,6 @@ footer {
 	padding-top: 5px;
 	border-top: 1px solid $grayMediumLight;
 	color: $grayLight;
-	a {
-		color: $gray;
-		&:hover{
-			color: $grayDarker;
-		}
-	}
-	small {
-		float: left;
-	}
-
 	ul {
 		float: right;
 		list-style: none;
@@ -185,10 +172,6 @@ input, textarea, select, .uneditable-input {
 	@include box_sizing;
 }
 
-
-    /* CUSTOMIZE THE NAVBAR
-    -------------------------------------------------- */
-
     /* Carousel base class */
     .carousel {
       margin-bottom: 60px;
@@ -206,6 +189,11 @@ input, textarea, select, .uneditable-input {
       text-shadow: 0 1px 1px rgba(0,0,0,.4);
       background-color: transparent;
       border: 0;
+    }
+
+    .carousel-control:hover {
+      background: none;
+
     }
 
     .carousel .item {
@@ -267,6 +255,11 @@ input, textarea, select, .uneditable-input {
     .marketing .span4 p {
       margin-left: 10px;
       margin-right: 10px;
+    }
+
+     #topScrmbls {
+      background-image: url(/assets/patterns/straws.png);
+
     }
 
 
@@ -352,3 +345,9 @@ input, textarea, select, .uneditable-input {
       }
 
     }
+
+/* Buttons */
+
+.btn:visited {
+  color: #FFF;
+}
