--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 	<div class="navbar-wrapper">
 			<div class="container">
-				<div class="navbar navbar-inverse">
+				<div class="navbar">
 					<div class="navbar-inner">
 						<!-- Responsive navbar -->
 			<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -9,11 +9,12 @@
                    <span class="icon-bar"></span>
                   </a>
 
-				
-
 				<div class="nav-collapse collapse">
-					<a class="brand" href="#"><%= link_to "ScrambleBox", root_path %></a>
 					<ul class="nav pull-left">
+                  					<%= link_to "ScrambleBox", root_path,  {:class => "brand"}  %>
+                  				</ul>
+
+					<ul class="nav pull-right">
 
 						<li><%= link_to "Help", help_path %></li>
 						 <% if signed_in? %>
