--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/error_messages' %>
-<%= f.label :name %>
+<%= f.label :name, class: "control" %>
 <%= f.text_field :name %>
 
 <%= f.label :email %>
