--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -35,7 +35,7 @@
       <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
     </div><!-- /.carousel -->
 
-<div class="container marketing">
+<div class="container marketing" id="homePage">
       <!-- Three columns of text below the carousel -->
       <div class="row" id="topScrmbls">
         <center> <h1> Best selling scrambles </h1> </center>
@@ -61,7 +61,6 @@
 
  <hr class="featurette-divider">
 
-      <div class="container marketing" >
       <!-- Three columns of text below the carousel -->
       <div class="row" id="endingScrmbls">
         <center> <h1> Scrambles ending soon </h1> </center>
@@ -87,7 +86,6 @@
 
       <hr class="featurette-divider">
 
-      <div class="container marketing">
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <center> <h1> Featured Scramble </h1> </center>
@@ -100,7 +98,6 @@
 
       <hr class="featurette-divider">
 
-     <div class="container marketing">
       <!-- Three columns of text below the carousel -->
       <div class="row" id="businessScrmbl">
         <center> <h1> Who is on ScrambleBox? </h1> <center>
@@ -126,7 +123,6 @@
 
       <hr class="featurette-divider">
 
-      <div class="container marketing">
       <!-- Three columns of text below the carousel -->
       <div class="row"  id="businessSignup">
         <div class="span12">
@@ -135,3 +131,4 @@
           <p><a class="btn" href="#">View details &raquo;</a></p>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
+    </div>
