--- a/app/views/static_pages/scrmble.html.erb
+++ b/app/views/static_pages/scrmble.html.erb
@@ -6,19 +6,53 @@
 
         <div class="span8">
         	        <center> <h1> ScrambleTitle </h1> </center>
-          <img class="img-circle" data-src="holder.js/140x140">
+                  <hr>
+            <img src="/assets/home-interior-design.jpg">
+            <hr>
+
+            <h2>---------------MILESTONE---------------</h2>
+
+            <hr>
+
+
           <h2>Heading</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+
         </div><!-- /.span4 -->
-        <div class="span4" id="timerBar">
+        <div class="span4" id="scrmbleSideBar">
           <img class="img-circle" data-src="holder.js/140x140">
           <h2>Timer</h2>
-          <p><a class="btn btn-warning btn-large" href="#">Follow retailer &raquo;</a></p>
+          <p><a class="btn btn-warning btn-large" href="#">Follow retailer</a></p>
           <p>Plekterselger AS - TLF 99 99 99 99 - www.plektersalg.no - 5392 Storebø</p>
           <p><b>Plekter, gitar, jazz3, rød, kvalitet, små, gode</b></p>
           <hr>
           <h4>Friends who bought this scramble</h4>
+          <p> -------------------------
+            --------------------------
+            --------------------------
+            ---------------------------
+            ---------------------------
+          </p>
+          <hr>
+          <h4>Scrambles from {retailername}</h4>
+          <p> --------------------------------
+            -----------------------------------
+            -----------------------------------
+            ----------------------------------
+            -----------------------------------
+            </p>
+            <a class="btn btn-primary" href="#">More from {retailername}&raquo;</a>
+            <hr>
+             <h4>Related scrambles</h4>
+          <p> --------------------------------
+            -----------------------------------
+            -----------------------------------
+            ----------------------------------
+            -----------------------------------
+            </p>
+            <a class="btn btn-primary" href="#">More &raquo;</a>
+
+
 
         </div><!-- /.span4 -->
       </div><!-- /.row -->
