--- a/app/views/static_pages/scrmble.html.erb
+++ b/app/views/static_pages/scrmble.html.erb
@@ -10,7 +10,7 @@
             <img src="/assets/home-interior-design.jpg">
             <hr>
 
-            <h2>---------------MILESTONE---------------</h2>
+            <%= milestone_bar([5,17], [15,20], 25, ["10%", "20%"], {width: 620}) %>
 
             <hr>
 
