Added more width to scrmblePage

--- a/app/assets/stylesheets/style_1.css.scss
+++ b/app/assets/stylesheets/style_1.css.scss
@@ -50,6 +50,7 @@ textarea {
 /* scramblesite */
 
 #scrmblePage {
+  width: 1180px;
   margin-top: 100px;
   padding-top: 20px;
    background-image: url(/assets/patterns/cream_dust.png);
