--- a/app/views/static_pages/scrmble.html.erb
+++ b/app/views/static_pages/scrmble.html.erb
@@ -4,13 +4,13 @@
       <!-- Three columns of text below the carousel -->
       <div class="row" id="topScrmbls">
 
-        <div class="span8">
+        <div class="span11">
         	        <center> <h1> ScrambleTitle </h1> </center>
                   <hr>
             <img src="/assets/home-interior-design.jpg">
             <hr>
 
-            <%= milestone_bar([5,17], [15,20], 25, ["10%", "20%"], {width: 620}) %>
+            <%= milestone_bar([5,17], [15,20], 25, ["10%", "20%"], {width: 630}) %>
 
             <hr>
 
@@ -21,10 +21,11 @@
         </div><!-- /.span4 -->
         <div class="span4" id="scrmbleSideBar">
           <img class="img-circle" data-src="holder.js/140x140">
-          <h2>Timer</h2>
+          <h2>Plekterselger AS</h2>
           <p><a class="btn btn-warning btn-large" href="#">Follow retailer</a></p>
-          <p>Plekterselger AS - TLF 99 99 99 99 - www.plektersalg.no - 5392 Storebø</p>
-          <p><b>Plekter, gitar, jazz3, rød, kvalitet, små, gode</b></p>
+          <p> TLF 99 99 99 99 - 5392 Storebø - Tapetfjesveien 23 - Postboks 1337</p>
+          <p><b>Vi selger plekter til gitarer og basser. Store og små og noen med sukker på!</b></p>
+          <p> www.plektersalg.no
           <hr>
           <h4>Friends who bought this scramble</h4>
           <p> -------------------------
