--- a/app/assets/stylesheets/style_1.css.scss
+++ b/app/assets/stylesheets/style_1.css.scss
@@ -1,4 +1,6 @@
+
 @import "bootstrap";
+
 
 /* mixins, variables, etc */
 
@@ -24,7 +26,7 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #333333;
-  background-image: url(/assets/patterns/grey.png);
+  background-color: #F4F4F4;
   padding-bottom: 40px;
   overflow: auto;
 }
@@ -50,7 +52,9 @@ textarea {
 /* scramblesite */
 
 #scrmblePage {
-  width: 1180px;
+  width: 1193px;
+  margin-top: 100px;
+  padding: 5px 10px 10px 10px;
   margin-top: 100px;
   padding-top: 20px;
    background-image: url(/assets/patterns/cream_dust.png);
@@ -61,10 +65,10 @@ textarea {
 }
 
 #scrmbleSideBar {
-  background-image: url(/assets/patterns/low_contrast_linen.png);
-  color: #FFF;
-  
-
+  background-color: #f0f0f0;
+  color: #2F4F4F;
+  border: 1px solid #CCC;
+  padding: 0px 5px 5px 5px;
 }
 
 /* header */
@@ -273,12 +277,13 @@ aside {
     }
 
     #homePage  {
-      background-image: url(/assets/patterns/satinweave.png);
+      background: #fff;
       margin-top: 50px;
       border: 1px dotted #CCC;
         -webkit-box-shadow: 0 8px 6px -6px black;
      -moz-box-shadow: 0 8px 6px -6px black;
           box-shadow: 0 8px 6px -6px black;
+      padding: 10px 10px 10px 10px;
     }
 
 
