--- a/app/views/static_pages/scrmble.html.erb
+++ b/app/views/static_pages/scrmble.html.erb
@@ -3,7 +3,6 @@
 <div class="container marketing" id="scrmblePage">
       <!-- Three columns of text below the carousel -->
       <div class="row" id="topScrmbls">
-
         <div class="span11">
         	        <center> <h1> ScrambleTitle </h1> </center>
                   <hr>
@@ -13,17 +12,22 @@
             <%= milestone_bar([5,17], [15,20], 25, ["10%", "20%"], {width: 858}) %>
 
 
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+        <center>  <h2>Heading</h2>     </center>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus congue tellus in orci lacinia et condimentum lectus molestie. Nulla mi sapien, pulvinar in scelerisque a, mattis vitae dolor. Vivamus cursus, mauris et cursus ultricies, purus felis faucibus nisi, id porttitor erat mi at quam. Integer fringilla hendrerit dui eu tristique. Prgaesent nec dolor quis sem ornare dapibus. Phasellus pretium orci vel tellus eleifend quis ultrices tellus pulvinar. Fusce consequat elit eget enim commodo feugiat. Aenean at quam lacus, sit amet vulputate lacus. Nam quis diam turpis. Aenean nisi risus, facilisis non luctus vel, dapibus ac quam. Praesent fermentum posuere mauris quis condimentum. Donec vehicula, augue tristique tincidunt placerat, arcu risus malesuada nunc, id blandit augue justo eget purus. Aliquam erat volutpat. Cras mattis tortor vel ipsum imperdiet sagittis. Nunc hendrerit elit eget nisl vulputate accumsan.
+
+Nulla accumsan fringilla sapien malesuada lobortis. Nulla eget purus et ligula tempus ullamcorper eget non mauris. Nullam et hendrerit augue. Quisque pretium erat at eros ultricies gravida. In eget massa tellus, eu eleifend nulla. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis vel leo nibh. Cras in quam congue leo commodo consequat in ut elit.
+
+Sed vitae eros vitae metus commodo varius. Proin elit urna, imperdiet eget ultrices a, vestibulum in odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi et ante a nibh pharetra vestibulum. Donec aliquet eros ac nisi semper non scelerisque mi pharetra. Vivamus imperdiet congue dui, et pharetra massa dignissim at. Nullam gravida pellentesque velit, eu sollicitudin leo lobortis a. Phasellus cursus congue pulvinar. Praesent at eros a libero faucibus tempor. Ut vehicula mattis fermentum. Nunc sit amet nisl eu tortor euismod fermentum ut in sem. Vivamus in neque nibh, sit amet suscipit massa. Nam pharetra cursus risus, non mattis urna ornare at. Ut viverra nunc magna, eu ultrices augue.
+
+Nulla in nisl nulla, eu faucibus turpis. Cras malesuada diam et massa ornare quis ultricies nisl consequat. Phasellus viverra suscipit odio nec tincidunt. Ut dictum, odio quis ultricies dictum, massa magna placerat dui, vitae volutpat sapien magna a sem. Aliquam erat volutpat. Nulla vel turpis metus, eget consectetur arcu. Mauris non pulvinar nibh. Integer vel elit vitae tellus ullamcorper rutrum sit amet id nulla. Sed lobortis urna sed quam tristique fermentum. .</p>
 
         </div><!-- /.span4 -->
         <div class="span4" id="scrmbleSideBar">
-          <img class="img-circle" data-src="holder.js/140x140">
           <h2>Plekterselger AS</h2>
-          <p><a class="btn btn-warning btn-large" href="#">Follow retailer</a></p>
+          <p><a class="btn btn-warning btn-large" href="#">Follow</a></p>
           <p> TLF 99 99 99 99 - 5392 Storebø - Tapetfjesveien 23 - Postboks 1337</p>
           <p><b>Vi selger plekter til gitarer og basser. Store og små og noen med sukker på!</b></p>
-          <p> www.plektersalg.no
+          <p> www.plektersalg.no </p>
           <hr>
           <h4>Friends who bought this scramble</h4>
           <p> -------------------------
@@ -54,4 +58,6 @@
 
 
         </div><!-- /.span4 -->
+      </div><!-- /.row -->                
+    </div><!-- container -->
       </div><!-- /.row -->
