Percentage scaling milestone

--- a/app/views/static_pages/scrmble.html.erb
+++ b/app/views/static_pages/scrmble.html.erb
@@ -9,7 +9,7 @@
             <img src="/assets/home-interior-design.jpg">
             <p>
 
-            <%= milestone_bar([5,17], [15,20], 25, ["10%", "20%"], {width: 858}) %>
+            <%= milestone_bar([5,17], [15,20], 25, ["10%", "20%"]) %>
 
 
         <center>  <h2>Heading</h2>     </center>
