--- a/app/assets/stylesheets/milestone.scss
+++ b/app/assets/stylesheets/milestone.scss
@@ -113,7 +113,7 @@ div.mylabel {
 
 div.scale-tb2 {
 	padding: 0; 
-	margin: 0;
+	margin: 0px 20px;
 	font-size: 0;
 	position: relative; 
 }
@@ -124,7 +124,7 @@ ul.milestones{
 	list-style: none outside none;
 	position: relative;
 	height:30px;
-	margin:0px;
+	margin:0px 20px;
 }
 
 li.milestone{
@@ -135,6 +135,7 @@ li.milestone{
 	position:absolute;
 	top: 7px;
 	text-align:center;
+	margin: 0px -5px;
 }
 
 span.icon{
@@ -175,10 +176,14 @@ div.scalemark {
 /*	SCALE TEXT */
 div.milestonecaption { 
 	position: absolute; 
-	margin: 0;
-	left: 10px; 
 	width: 20px; 
+	margin: 0px -10px;
 	font: 8pt Arial, sans-serif; 
 	text-align: center; 
-	color: #575757; 
+	color: #575757;
+}
+
+div.mscaption_wrapper{
+	margin:0px 20px;
+	position:relative;
 }
