Organized scramble sites into folder to make it easier and named them into their functionality, started design on new scramble and updated some css

--- a/app/assets/stylesheets/style_1.css.scss
+++ b/app/assets/stylesheets/style_1.css.scss
@@ -49,26 +49,10 @@ textarea {
 
 /* typography */
 
-/* scramblesite */
 
-#scrmblePage {
-  width: 1193px;
-  margin-top: 100px;
-  padding: 5px 10px 10px 10px;
-  margin-top: 100px;
-  padding-top: 20px;
-   background-image: url(/assets/patterns/cream_dust.png);
-      border: 1px dotted #CCC;
-        -webkit-box-shadow: 0 8px 6px -6px black;
-     -moz-box-shadow: 0 8px 6px -6px black;
-          box-shadow: 0 8px 6px -6px black;
-}
-
-#scrmbleSideBar {
-  background-color: #f0f0f0;
-  color: #2F4F4F;
-  border: 1px solid #CCC;
-  padding: 0px 5px 5px 5px;
+#businessSignup {
+   margin:0 auto;
+   float:none;
 }
 
 /* header */
