--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,10 @@
 <% provide(:title, 'Sign up') %>
 
 <div class="container" id="forms">
-<h1>Sign up</h1>
+
 <div class="row">
-  <div class="span6 offset3">
+  <div class="span6">
+  	<h1>Sign up</h1>
     <%= form_for(@user) do |f| %>
      <%= render 'shared/error_messages', object: f.object %>
       <%= render 'fields', f: f %> 
