Added index site for scrambles, tagging to description, cleaned up old code, fixed css and added more functionality to site

--- a/app/views/scramble/new.html.erb
+++ b/app/views/scramble/new.html.erb
@@ -13,6 +13,8 @@
 <hr>
 <h3> Description </h3>
 <textarea class="field span12" id="textarea" rows="6" placeholder="Write a good description for your product here!"></textarea>
+ <input type="text" autocomplete="off" data-items="6" data-provide="typeahead" name="tags" placeholder="Tags" style="width:9em;" class="input-medium tagManager" data-original-title="">
+  <script> jQuery(".tagManager").tagsManager(); </script>
 <hr>
 <h3> Categories </h3>
 <hr>
@@ -23,13 +25,12 @@
   	<h4> Tips for creating better scrambles </h4>
   	<p> Use bright and colorful pictures, people love 'em. </p>
   	<br>
-  	<p> You can have as many milestones as you want, but don't use to many either way. This tool helps you calculate your profit at each milestone and in total, nifty!
+  	<p> You can have as many milestones as you want, but don't use to many either way. This tool helps you calculate your profit at each milestone and in total, nifty! </p>
   	<br>
   	<p> Choose your first words wisely, it's what's get your customers interested in the first place. A short and brief description of your product is essential for the customer to understand it. </p>
   	<br>
   	<p> Always doublecheck what category your product is in, because you don't want it to get lost in the wrong section of the site. </p>
 
   </div>
-
  </div> <!-- row -->
 </div> <!-- Container -->
