--- a/app/assets/stylesheets/scramble.css.scss
+++ b/app/assets/stylesheets/scramble.css.scss
@@ -12,6 +12,19 @@
 	border: 1px dotted #CCC;
 }
 
+#createScrambleSidebar {
+  background: #EEE;
+  border: 1px dotted #CCC;
+  padding: 5px 5px 5px 5px;
+}
+
+#indexScramble {
+  margin-top: 100px;
+  width: 1200px;
+  background-image: url(/assets/patterns/cream_dust.png);
+  padding: 5px 10px 10px 10px;
+  border: 1px dotted #CCC;
+}
 /* Show Scramble */
 
 #scrmblePage {
