--- a/app/views/scramble/index.html.erb
+++ b/app/views/scramble/index.html.erb
@@ -8,10 +8,7 @@
 <div class="row" id="topScrmbls">
         <center> <h2> Best selling scrambles </h2> </center>
         <div class="span4">
-          <img class="img-circle" data-src="holder.js/140x140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <%= render 'scramblebox' %>
         </div><!-- /.span4 -->
         <div class="span4">
           <img class="img-circle" data-src="holder.js/140x140">
@@ -27,21 +24,7 @@
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 
-
   </div>
-  <div class="sidebar-nav pull-right">
-	<div class="well" style="width:250px; padding: 8px 0;">
-		<ul class="nav nav-list"> 
-		  <li class="nav-header">Explore Scrambles</li>        
-		  <li><a href="index"><i class="icon-home"></i> Home </a></li>
-          <li><a href="#"><i class="icon-th"></i> Categories </a></li>
-          <li><a href="#"><i class="icon-comment"></i> Most talked about </a></li>
-		  <li class="active"><a href="#"><i class="icon-globe"></i> Stores <span class="badge badge-info">4</span></a></li>
-		  <li><a href="#"><i class="icon-user"></i> Friends<span class="badge badge-info">10</span></a></li>
-          <li class="divider"></li>
-		  <li><a href="#"><i class="icon-comment"></i> Settings</a></li>
-		</ul>
-	</div>
-</div>
+  <%= render 'sidebar' %> <!-- Navigation bar -->
  </div>
 </div>
