Huge design improvement, added a blue color as main color and done some minor improvements on the scramblebox

--- a/app/views/scramble/_scramblebox.html.erb
+++ b/app/views/scramble/_scramblebox.html.erb
@@ -4,6 +4,6 @@
           			<p class="scrambletitle"> Laminat treverk gulv i mørk farge </p>
           		</div>
           	<div class="scramblebuy">
-          		<a href="#" class="scramblebuybtn pull-left">Buy<i class="icon-chevron-right"></i></a>
+          		<a href="#" class="btn btn-primary" id="scramblebtn">Buy<i class="icon-chevron-right"></i></a>
           	</div>
           </div>
