--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
             <div class="carousel-caption">
               <h1>The best deals from the best suppliers</h1>
               <p class="lead">Here at ScrambleBox you will get the best price, because you are the one deciding the price! Get your friends to join you to get even lower prices on your next shopping spree!</p>
-             <%= link_to "Sign up today", signup_path, class: "btn btn-large btn-success" %>
+             <%= link_to "Sign up today", signup_path, class: "btn btn-success btn-large" %>
             </div>
           </div>
         </div>
