--- a/app/assets/stylesheets/scramble.css.scss
+++ b/app/assets/stylesheets/scramble.css.scss
@@ -92,24 +92,20 @@ border-bottom-left-radius: 5px;
 float: left;
 width: 100%;
 height: 50px;
-background: #27AAE2;
+background: #FFF;
 position: relative;
 }
 
-.scramblebuybtn {
-  background-color:#FFF;
-  font-size:15px;
-  font-weight:bold;
-  padding:7px 23px;
-  margin: 7px 0px 0px 10px;
-  text-decoration:none;
-}
-.scramblebuybtn:hover {
-  text-decoration: none;
-  background-color:#dfdfdf;
+#scramblebtn {
+  float: left;
+  margin: 9px 0px 0px 5px;
 }
 
 .scramblebuybtn:active {
   position:relative;
   top:1px;
 }
+
+ .btn:visited {
+  color:FFF;
+ }
