--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 	<div class="navbar-wrapper">
 			<div class="container">
-				<div class="navbar">
+				<div class="navbar navbar-inverse">
 					<div class="navbar-inner">
 						<!-- Responsive navbar -->
 			<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -42,7 +42,23 @@
 				
 						<% else %>
 
-						<li><%= link_to "Sign In", signin_path %></li>
+						<li class="divider-vertical"></li>
+					    <li class="dropdown">
+						<a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
+						<div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
+							<form method="post" action="login" accept-charset="UTF-8">
+								<input style="margin-bottom: 15px;" type="text" placeholder="Username" id="username" name="username">
+								<input style="margin-bottom: 15px;" type="password" placeholder="Password" id="password" name="password">
+								<input style="float: left; margin-right: 10px;" type="checkbox" name="remember-me" id="remember-me" value="1">
+								<label class="string optional" for="user_remember_me"> Remember me</label>
+								<input class="btn btn-primary btn-block" type="button" id="sign-in" value="Sign In">
+								<label style="text-align:center;margin-top:5px">or</label>
+                                <input class="btn btn-primary btn-block" type="button" id="sign-in-google" value="Sign In with Facebook">
+								<input class="btn btn-primary btn-block" type="button" id="sign-in-twitter" value="Sign In with Twitter">
+							</form>
+						</div>
+					</li>
+
 						<% end %>
 
 					</ul>
