--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,7 @@
 
 <div class="row">
   <div class="span6">
+  	<div class="well">
   	<h1>Sign up</h1>
     <%= form_for(@user) do |f| %>
      <%= render 'shared/error_messages', object: f.object %>
@@ -11,5 +12,9 @@
       <hr>
       <%= f.submit "Create my account", :class => "btn btn-large btn-primary" %>
     <% end %>
+   </div>
+  </div>
+  <div class="span6">
+  	<h2> Get your discounts now and help your friends get theirs today! </h2>
   </div>
 </div>
