Minor improvements to design, about section started

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,21 @@
-<% provide(:title, 'About Us') %>
+<% provide(:title, 'About ScrambleBox') %>
 
-	<h1>About Us</h1>
+<div class="container-fluid" id="forms">
+	<div class="row-fluid" id="aboutPage">
+		<div class="span10">
+	<h2>What is ScrambleBox?</h2>
 	<p>
-	 The ScrambleBox team wants to explore and progress the experience with selling and buying items, make it more enjoyable, easier to find the sweet deals and secure to sell your items!
+	 ScrambleBox is a marketplace which you decide the discount and items for sale. There is no boundry to what you can get here, all in a safe and secure manner.
 	</p>
+
+   </div>
+ <div class="span2">
+ 	<ul class="nav nav-list">
+  <li class="nav-header">About</li>
+  <li class="active"><a href="#">What?</a></li>
+  <li><a href="#">Who?</a></li>
+  <li><a href="#">Why?</a></li>
+</ul>
+  </div>
+ </div>
+</div>
