--- a/app/views/scramble/_sidebar.html.erb
+++ b/app/views/scramble/_sidebar.html.erb
@@ -5,8 +5,8 @@
 		  <li class="active"><a href="index"><i class="icon-home"></i> Home </a></li>
           <li><a href="#"><i class="icon-th"></i> Categories </a></li>
           <li><a href="#"><i class="icon-comment"></i> Most talked about </a></li>
-		  <li><a href="#"><i class="icon-globe"></i> Stores <span class="badge badge-info">4</span></a></li>
-		  <li><a href="#"><i class="icon-user"></i> Friends<span class="badge badge-info">10</span></a></li>
+		  <li><a href="#"><i class="icon-globe"></i> Stores </a></li>
+		  <li><a href="#"><i class="icon-user"></i> Friends</a></li>
           <li class="divider"></li>
 		  <li><a href="#"><i class="icon-comment"></i> Settings</a></li>
 		</ul>
