--- a/app/views/shared/_scramblebox.html.erb
+++ b/app/views/shared/_scramblebox.html.erb
@@ -1,5 +1,5 @@
 <div class="scramblebox">
-          		<img class="scrambleimage" src="/assets/p33612.jpg">
+          		<img class="scrambleimage" src="/assets/background_wood.gif">
           		<div class="scrambletitlediv">
           			<p class="scrambletitle"> Laminat treverk gulv i mørk farge </p>
           		</div>
