--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,27 +8,19 @@
                    <span class="icon-bar"></span>
                    <span class="icon-bar"></span>
                   </a>
-
 				<div class="nav-collapse collapse">
 					<ul class="nav pull-left">
                   					<%= link_to "ScrambleBox", root_path,  {:class => "brand"}  %>
                   				</ul>
-
-
 					<ul class="nav pull-right">
-
 						 <form class="navbar-search">
                               <input type="text" class="search-query" placeholder="Search">
                          </form>
-
-
 						 <% if signed_in? %>
-
-                  	    
-						  <li><%= link_to "Users", users_path %></li>
-						  <li id="fat-menu" class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-								Account <b class="caret"></b>
+						  <li><%= link_to "Home", root_path %></li>
+						  <li><%= link_to "Activity", users_path %></li>
+						   <li id="fat-menu" class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b>
 							</a>
 							  <ul class="dropdown-menu">
 								 <li><%= link_to "Profile", current_user %></li>
@@ -47,13 +39,13 @@
 						<a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
 						<div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
 							<form method="post" action="login" accept-charset="UTF-8">
-								<input style="margin-bottom: 15px;" type="text" placeholder="Username" id="username" name="username">
+								<input style="margin-bottom: 15px;" type="text" placeholder="E-mail" id="email" name="email">
 								<input style="margin-bottom: 15px;" type="password" placeholder="Password" id="password" name="password">
 								<input style="float: left; margin-right: 10px;" type="checkbox" name="remember-me" id="remember-me" value="1">
 								<label class="string optional" for="user_remember_me"> Remember me</label>
 								<input class="btn btn-primary btn-block" type="button" id="sign-in" value="Sign In">
 								<label style="text-align:center;margin-top:5px">or</label>
-                                <input class="btn btn-primary btn-block" type="button" id="sign-in-google" value="Sign In with Facebook">
+                                <input class="btn btn-primary btn-block" type="button" id="sign-in-facebook" value="Sign In with Facebook">
 								<input class="btn btn-primary btn-block" type="button" id="sign-in-twitter" value="Sign In with Twitter">
 							</form>
 						</div>
