--- a/app/views/scramble/index.html.erb
+++ b/app/views/scramble/index.html.erb
@@ -6,25 +6,20 @@
  	<center> <h1> Browse all Scrambles </h1> </center>
  	<hr>
 <div class="row" id="topScrmbls">
-        <center> <h2> Best selling scrambles </h2> </center>
+      <center> <h2> Best selling scrambles </h2> </center>
         <div class="span4">
           <%= render 'scramblebox' %>
         </div><!-- /.span4 -->
         <div class="span4">
-          <img class="img-circle" data-src="holder.js/140x140">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+            <%= render 'scramblebox' %>
         </div><!-- /.span4 -->
         <div class="span4">
-          <img class="img-circle" data-src="holder.js/140x140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <%= render 'scramblebox' %>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
-
   </div>
-  <%= render 'sidebar' %> <!-- Navigation bar -->
+  <!-- Navigation bar -->
+  <%= render 'sidebar' %> 
+  <!-- end -->
  </div>
 </div>
