--- a/app/views/scramble/new.html.erb
+++ b/app/views/scramble/new.html.erb
@@ -4,21 +4,9 @@
 
 <center><h1>Create a new scramble </h1></center>
 
-<div class="row">
- <div class="span12">
-  <h3>Add photos</h3>
- <hr>
-  <h3> Milestones </h3>
- <hr>
-  <h3> Description </h3>
-   <textarea class="field span12" id="textarea" rows="6" placeholder="Write a good description for your product here!"></textarea>
-   <input type="text" autocomplete="off" data-items="6" data-provide="typeahead" name="tags" placeholder="Tags" style="width:9em;" class="input-medium tagManager" data-original-title="">
-  <script> jQuery(".tagManager").tagsManager(); </script>
- <hr>
-  <h3> Categories </h3>
- <hr>
-  <a href="#" class="btn btn-primary btn-large">Submit Scramble <i class="icon-white icon-plus"></i></a>
-</div> <!-- span12 -->
+<!-- Creates the fields for creating a new scramble -->
+<%= render 'createfields' %>
+<!-- end -->
 
   <div class="span3" id="createScrambleSidebar">
   	<h4> Tips for creating better scrambles </h4>
