--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,6 +15,8 @@
    </div>
   </div>
   <div class="span6">
-  	<h2> Get your discounts now and help your friends get theirs today! </h2>
+  	<h3> Get your discounts now and help your friends get theirs today! See how to get started scrambling today in this video! </h3>
+    <h1> PLACEHOLDER FOR VIDEO </h1>
+    <p>Want more info about ScrambleBox? Read more here </p>
   </div>
 </div>
