Started working on relationsships, followers and business section. Alot of work on models and controllers on scrambles, users and business

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -106,10 +106,10 @@
       <div class="row-fluid">
                   <img src="/assets/background_wood.gif" id="businessSignupIMG">
         <div class="span12">
-          <div class="span6"  id="businessSignup">
+          <div class="span7"  id="businessSignup">
           <center><h2>Get your business on ScrambleBox today!</h2></center>
           <p>Here on ScrambleBox we give the tools for you to sell your products in large numbers at the time for what we call a progressive price, where the customer is in charge of the discount and extra items. Sign up to learn more about how to get started. It's free!</p>
-          <p><a class="btn btn-primary" href="#">Sign up for a business account</a></p>
+          <p><a class="btn btn-primary" href="/business-signup.html">Sign up for a business account</a></p>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
   </div>
