--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
   	<div class="well">
   	<h1>Sign up</h1>
     <%= form_for(@user) do |f| %>
-     <%= render 'shared/error_messages', object: f.object %>
+     <%= render 'shared/error_messages_users', object: f.object %>
       <%= render 'fields', f: f %> 
       <hr>
       <%= f.submit "Create my account", :class => "btn btn-large btn-primary" %>
