--- a/app/views/business/_fields.html.erb
+++ b/app/views/business/_fields.html.erb
@@ -1,6 +1,9 @@
-<%= render 'shared/error_messages_users' %>
+
 <%= f.label :name, class: "control" %>
 <%= f.text_field :name %>
+
+<%= f.label :orgnr %>
+<%= f.text_field :orgnr %>
 
 <%= f.label :email %>
 <%= f.text_field :email %>
