--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,14 @@
-<%= provide(:title, 'All users') %>
+<%= provide(:title, 'Activity') %>
 
-<h1>All users</h1>
+<div class="container" id="userDashboard">
 
-<%= will_paginate %>
+<h1>Activity</h1>
+<div class="row">
+	<div class="span9">
+		<h3> Feed </h3>
 
-<ul class="users">
-  <%= render @users %>
-</ul>
-
-<%= will_paginate %>
+<div class="span3">
+	<%= render 'dashsidebar' %>
+  </div>
+ </div>
+</div>
