--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,11 +9,6 @@
 </section>
 </aside>
 <div class="span8">
-	<h3>Microlists (<%= @user.microlists.count %>)</h3>
-	<ol class="microlists">
-		<%= render @microlists %>
-	</ol>
-	<%= will_paginate @microlists %>
-	<% end %>
+	<h3>Scrambles</h3>
  </div>
 </div>
