--- a/app/assets/stylesheets/business.css.scss
+++ b/app/assets/stylesheets/business.css.scss
@@ -1,3 +1,33 @@
 // Place all the styles related to the Business controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#businessSignup {
+   margin:0 auto;
+   float:none;
+   position: relative;
+   background: rgba(54,25,25,.75);
+   padding: 10px 10px 10px 10px;
+   margin-top: 20px;
+   margin-bottom: 20px;
+   h2 {
+    color: #FFF;
+   }
+   p {
+    color: #F4F4F4;
+   }
+}
+
+#businessDashboard {
+	margin-top: 80px;
+
+}
+
+#dashboardFeedBusiness {
+	border: 1px dotted #CCC;
+	margin-top: 20px;
+	      -moz-box-shadow: 0px 7px 17px #000000;
+      -webkit-box-shadow: 0px 7px 17px #000000;
+      box-shadow: 0px 7px 17px #CCC;
+
+}
